--- a/japanese.po
+++ b/japanese.po
@@ -31,7 +31,7 @@ msgstr "デモツイン。"
 # --------- General ---------#
 # base translation: "Yes"
 msgid "yes"
-msgstr "Yes"
+msgstr "はい"
 
 # base translation: "No"
 msgid "no"
